# ai-avatar-framework

./: .gitignore  README.md
core/: pyproject.toml
core/src/ai_avatar/: __init__.py  __main__.py  config.py  conversation_manager.py  engine.py  event_bus.py
core/src/ai_avatar/server/: websocket.py
core/src/ai_avatar/workers/: base.py  llm.py  stt.py  tts.py
core/tests/: test_client.py
core/tests/sample_config/: llm.yaml  personality.yaml  stt.yaml  tts.yaml
docs/: architecture.md  components.md  diagrams.md  llm-conversation-design.md  llm-prompt-design.md  project-structure.md  protocol.md  stt-processing-design.md  timeout-resilience-design.md  tts-buffering-design.md
